<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_BCD" Id="{14b2ccb8-3cb3-4a55-a33b-6bb5b32051a6}">
    <Declaration><![CDATA[TYPE T_BCD :
STRUCT
	strState: STRING;
	strCmd: STRING;
	intCmd: INT;
	stStatus: T_BCD_Status;
	stErr: T_BCD_Error;
	stCfg: T_BCD_Cfg;
	stPar: T_BCD_Par;
	stData: T_BCD_Data;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>